fixed: disabled analog-scale widget is still visible

--- a/src/widget/analog-scale/analog-scalepicker.scss
+++ b/src/widget/analog-scale/analog-scalepicker.scss
@@ -176,7 +176,7 @@ $q-pad-right: 0px !default;
 
     }
 
-    &:not(.or-appearance-horizontal) {
+    &.or-appearance-vertical:not(.disabled) {
         @include display-flex;
 
         @include flex(1);
